--- a/ZakLyd/Content/Site.css
+++ b/ZakLyd/Content/Site.css
@@ -2,30 +2,76 @@
     overflow-x:hidden;
 }
 
-content{
+#global-wraper{
+    margin-left:1%;
+    margin-right:1%;
 
 }
 
 #main{
-    height: 600px;
-    padding: 1% 1% 1% 1%;
-    background-image:url("Images/Backgrounds/HaramBG2.jpg");
+    /*height: 600px;*/
+    overflow-x:hidden;
+    background-color:#F2F2F2;
 }
+
 .home-search{
     padding-top:10%;
+}
+
+.home-search-row{
+    height:567px;
+    margin-left:0px;
+    margin-top:0px;
+}
+
+.home-search-background{
+    position:absolute;
+    margin-left:0px;
+    margin-right:0px;
+    height:567px;
+    width:100%;
+    background-size: contain;
+    background-image:url("Images/Backgrounds/HaramBG3.jpg");
+    background-repeat: no-repeat;
+    opacity:0.8;
+    overflow:hidden;
+}
+.search-row{
+    margin-bottom: 0.1%;
 }
 .home-search label{
     color:white;
 }
+
+.btn-home-search{
+    width:29%;
+}
+
+.search-title{
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight:bold;
+
+}
+
 .search-date{
     max-width:400px;
 }
 
+.home-promotion-wraper{
+    padding:1% 1% 1% 1%;
+    margin-left:0px;
+    margin-right:0px;
+}
+
+.home-promotion-content{
+    border: 1px solid #6E6E6E;
+
+}
 /* header */
 header{
     /*background:url("Images/Backgrounds/HaramBG2.jpg");*/
-    background-color: #F2F2F2;
-    padding:1% 1% 1% 1%;
+    background-color: lightgray;
     min-height:50px;
 }
 
@@ -45,7 +91,8 @@ header{
 footer{
     background-color :#2E2E2E;
     color: whitesmoke;
-    padding:2% 5% 5% 5%;
+    padding-top:2%;
+    padding-bottom:2%;
 }
 
 .btn-social-icon {
