--- a/ZakLyd/Views/Home/Index.cshtml
+++ b/ZakLyd/Views/Home/Index.cshtml
@@ -1,19 +1,22 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-
-    <div class="row home-search">
+    
+    <div class="row home-search-row">
+        <div class="home-search-background"> </div>
         <div class="col-sx-0 col-sm-offset-0 col-md-3 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8 home-search">
             @using (Html.BeginForm("Index", "Home", FormMethod.Post))
             {
                 @Html.ValidationSummary(true);
                 <fieldset>
-                    <div class="row">
-                            <label class="radio-inline"><input type="radio" name="optradio">Hajj</label>
-                            <label class="radio-inline"><input type="radio" name="optradio">Omra</label>
+                    <div class="row search-row search-title" style="text-align:center">
+                        <h1> Partez faire votre Omra, votre Haj... </h1>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 search-date">
+                    <div class="row search-row" style="text-align:center">
+                        <input type="checkbox" id="hajjradio" name="optradio">
+                    </div>
+                    <div class="row search-row">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-date">
                             <div class="form-group">
                                 <div class='input-group date datepicker'>
                                     <input id='startDate' type='text' class="form-control " placeholder="Du.." />
@@ -23,7 +26,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 search-date">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-date">
                             <div class="form-group">
                                 <div class='input-group date datepicker'>
                                     <input id='endDate' type='text' class="form-control" placeholder="Au.." />
@@ -33,19 +36,43 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4">
-                            <input id="nbPersons" type="text" value="" placeholder="Pour 2 personnes" />
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
-                            <button class="btn btn-primary">Rechecher</button>
+
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                            <input id="nbPersons" type="text" value="" placeholder="Ex: pour 2 personnes" />
                         </div>
                     </div>
+                    <div class="row search-row" style="text-align:center">
+                        <button class="btn btn-dropbox btn-home-search">Rechecher</button>
+                    </div>
+
                 </fieldset>
             }
         </div>
         <div class="col-sx-0 col-sm-offset-0 col-md-3 col-lg-2"></div>
+    </div>
+
+    <div class="row home-promotion-wraper">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="home-promotion-content">
+                <div class="promo-image">
+                    <a href="#"><img src="~/Content/Images/test/promo1.jpg" title="promo1" /></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="home-promotion-content">
+                <div class="promo-image">
+                    <a href="#"><img src="~/Content/Images/test/promo2.jpg" title="promo1" /></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="home-promotion-content">
+                <div class="promo-image">
+                    <a href="#"><img src="~/Content/Images/test/promo1.jpg" title="promo1" /></a>
+                </div>
+            </div>
+        </div>
     </div>
 
 
@@ -57,6 +84,8 @@
             verticalupclass: 'glyphicon glyphicon-plus',
             verticaldownclass: 'glyphicon glyphicon-minus'
         });
+
+        $("#hajjradio").bootstrapSwitch({ onText: "Omra", offText: "Haj", state: true });
     </script>
 }
 
