--- a/ZakLyd/Views/Shared/_Layout.cshtml
+++ b/ZakLyd/Views/Shared/_Layout.cshtml
@@ -6,91 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Haj&Omra</title>
     @Styles.Render("~/Content/css")
-    <!--<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css'>
-    -->
-    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <!--<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script> 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js'></script>-->
 
-    @*@Scripts.Render("~/bundles/jquery")*@
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </head>
 <body>
-    <header>
-        <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-5">
-                <!-- site logo goes here -->
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5" style="text-align:right">
-                <button type="button" class="btn btn-secondary">Connection</button>
-                <button type="button" class="btn btn-secondary">Inscription</button>
-            </div>
-            <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-                <div id="polyglotLanguageSwitcher" class="pull-right">
-                    <form action="#">
-                        <select id="polyglot-language-options">
-                            <option id="en" value="en" selected>English</option>
-                            <option id="fr" value="fr">Fran&ccedil;ais</option>
-                        </select>
-                    </form>
+    <div id="global-wraper">
+        <header>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-5">
+                    <!-- site logo goes here -->
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5" style="text-align:right">
+                    <button type="button" class="btn btn-secondary">Connection</button>
+                    <button type="button" class="btn btn-secondary">Inscription</button>
+                </div>
+                <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+                    <div id="polyglotLanguageSwitcher" class="pull-right">
+                        <form action="#">
+                            <select id="polyglot-language-options">
+                                <option id="en" value="en" selected>English</option>
+                                <option id="fr" value="fr">Fran&ccedil;ais</option>
+                            </select>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <content>
-        <div id="main">
-            @RenderBody()
-        </div>
-    </content>
+        <content>
+            <div id="main">
+                @RenderBody()
+            </div>
+        </content>
 
-    <footer>
-        <div class="row footer-social">
-            <h6 class="footer-h6"> Suivez nous...</h6>
-            <!-- follow us -->
-            <a class="btn btn-social-icon btn-twitter">
-                <span class="fa fa-twitter"></span>
-            </a>
-            <a class="btn btn-social-icon btn-facebook">
-                <span class="fa fa-facebook"></span>
-            </a>
-            <a class="btn btn-social-icon btn-google">
-                <span class="fa fa-google"></span>
-            </a>
-            <a class="btn btn-social-icon btn-yahoo">
-                <span class="fa fa-yahoo"></span>
-            </a>
-        </div>
-        <hr />
-        <div class=" row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
-                <h6 class="footer-h6"> HajjOmra.Com </h6>
-                <ul>
-                    <li><a href="#">A propo de Haj Omra</a></li>
-                    <li><a href="#">Nous contacter</a></li>
-                    <li><a href="#">Mentions legales</a></li>
-                    <li><a href="#">Comment ça marche</a></li>
-                </ul>
+        <footer>
+            <div class="row footer-social">
+                <h6 class="footer-h6"> Suivez nous...</h6>
+                <!-- follow us -->
+                <a class="btn btn-social-icon btn-twitter">
+                    <span class="fa fa-twitter"></span>
+                </a>
+                <a class="btn btn-social-icon btn-facebook">
+                    <span class="fa fa-facebook"></span>
+                </a>
+                <a class="btn btn-social-icon btn-google">
+                    <span class="fa fa-google"></span>
+                </a>
+                <a class="btn btn-social-icon btn-yahoo">
+                    <span class="fa fa-yahoo"></span>
+                </a>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
-                <h6 class="footer-h6"> Le Hajj </h6>
-                <ul>
-                    <li><a href="#">Le guide du Haj</a></li>
-                    <li><a href="#">Préparer son haj</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
-                <h6 class="footer-h6"> La Omra </h6>
+            <hr />
+            <div class=" row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
+                    <h6 class="footer-h6"> HajjOmra.Com </h6>
+                    <ul>
+                        <li><a href="#">A propo de Haj Omra</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                        <li><a href="#">Mentions legales</a></li>
+                        <li><a href="#">Comment ça marche</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
+                    <h6 class="footer-h6"> Le Hajj </h6>
+                    <ul>
+                        <li><a href="#">Le guide du Haj</a></li>
+                        <li><a href="#">Préparer son haj</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-section">
+                    <h6 class="footer-h6"> La Omra </h6>
                     <ul>
                         <li><a href="#">Le guide de la Omra</a></li>
                         <li><a href="#">Bien choisir son agence</a></li>
                     </ul>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
+
 
 
 
