--- a/ZakLyd/Views/Home/Index.cshtml
+++ b/ZakLyd/Views/Home/Index.cshtml
@@ -1,92 +1,10 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-    
-    <div class="row home-search-row">
-        <div class="home-search-background"> </div>
-        <div class="col-sx-0 col-sm-offset-0 col-md-3 col-lg-2"></div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8 home-search">
-            @using (Html.BeginForm("Index", "Home", FormMethod.Post))
-            {
-                @Html.ValidationSummary(true);
-                <fieldset>
-                    <div class="row search-row search-title" style="text-align:center">
-                        <h1> Partez faire votre Omra, votre Haj... </h1>
-                    </div>
-                    <div class="row search-row" style="text-align:center">
-                        <input type="checkbox" id="hajjradio" name="optradio">
-                    </div>
-                    <div class="row search-row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-date">
-                            <div class="form-group">
-                                <div class='input-group date datepicker'>
-                                    <input id='startDate' type='text' class="form-control " placeholder="Du.." />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-date">
-                            <div class="form-group">
-                                <div class='input-group date datepicker'>
-                                    <input id='endDate' type='text' class="form-control" placeholder="Au.." />
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                            <input id="nbPersons" type="text" value="" placeholder="Ex: pour 2 personnes" />
-                        </div>
-                    </div>
-                    <div class="row search-row" style="text-align:center">
-                        <button class="btn btn-dropbox btn-home-search">Rechecher</button>
-                    </div>
+    Html.RenderPartial("SearchPartialView");
 
-                </fieldset>
-            }
-        </div>
-        <div class="col-sx-0 col-sm-offset-0 col-md-3 col-lg-2"></div>
-    </div>
+    Html.RenderPartial("PromoListPartialView",);
 
-    <div class="row home-promotion-wraper">
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="home-promotion-content">
-                <div class="promo-image">
-                    <a href="#"><img src="~/Content/Images/test/promo1.jpg" title="promo1" /></a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="home-promotion-content">
-                <div class="promo-image">
-                    <a href="#"><img src="~/Content/Images/test/promo2.jpg" title="promo1" /></a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="home-promotion-content">
-                <div class="promo-image">
-                    <a href="#"><img src="~/Content/Images/test/promo1.jpg" title="promo1" /></a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script type="text/javascript">
-        $(".datepicker").datepicker({ format: "dd/mm/yyyy", local: "fr" });
-
-        $("#nbPersons").TouchSpin({
-            verticalbuttons: true,
-            verticalupclass: 'glyphicon glyphicon-plus',
-            verticaldownclass: 'glyphicon glyphicon-minus'
-        });
-
-        $("#hajjradio").bootstrapSwitch({ onText: "Omra", offText: "Haj", state: true });
-    </script>
 }
 
 
